# netanvil-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-deb.yml
crates/netanvil-api/: Cargo.toml
crates/netanvil-api/src/: agent.rs  handlers.rs  identity.rs  lib.rs  server.rs  tls.rs  types.rs
crates/netanvil-api/tests/: agent_protocol_behavior.rs  api_behavior.rs
crates/netanvil-cli/: Cargo.toml  build.rs
crates/netanvil-cli/src/: main.rs  output.rs  parsing.rs
crates/netanvil-cli/src/commands/: agent.rs  leader.rs  leader_server.rs  mod.rs  test.rs
crates/netanvil-core/: Cargo.toml
crates/netanvil-core/examples/: custom_generator.rs
crates/netanvil-core/src/: capture.rs  coordinator.rs  dropping.rs  engine.rs  generator.rs  handle.rs  in_flight.rs  io_worker.rs  isolation.rs  lib.rs  lifecycle.rs  precision.rs  report.rs  result.rs  signal.rs  timer_thread.rs  transformer.rs  worker.rs
crates/netanvil-core/src/controller/: arbiter.rs  autotune.rs  builder.rs  ceiling.rs  clock.rs  composite_pid.rs  composition.rs  constraint.rs  constraints.rs  mod.rs  pid.rs  pid_autotune.rs  pid_constraint.rs  pid_math.rs  ramp.rs  slow_start.rs  smoothing.rs  static_rate.rs  step_rate.rs  threshold.rs  trace.rs
crates/netanvil-core/src/scheduler/: constant_rate.rs  mod.rs  poisson.rs
crates/netanvil-core/tests/: connection_policy_behavior.rs  connection_policy_e2e.rs  controller_behavior.rs  engine_behavior.rs  external_signal_e2e.rs  flume_compio_integration.rs  integration.rs  io_worker_behavior.rs  response_callback_behavior.rs  saturation_detection.rs  scale_test.rs  scheduler_behavior.rs  shadow_validation.rs  timer_integration.rs  timer_thread_behavior.rs  worker_behavior.rs
crates/netanvil-distributed/: Cargo.toml
crates/netanvil-distributed/src/: coordinator.rs  http_cluster.rs  leader_api.rs  leader_server.rs  lib.rs  result_store.rs  signal.rs  test_queue.rs  test_spec.rs
crates/netanvil-distributed/tests/: distributed_behavior.rs  distributed_tcp_behavior.rs  leader_api_behavior.rs
crates/netanvil-dns/: Cargo.toml
crates/netanvil-dns/src/: executor.rs  generator.rs  lib.rs  transformer.rs  wire.rs
crates/netanvil-dns/tests/: dns_e2e.rs
crates/netanvil-events/: Cargo.toml
crates/netanvil-events/src/: anchor.rs  lib.rs  recorder.rs  schema.rs
crates/netanvil-events/tests/: recorder_behavior.rs
crates/netanvil-harness/: Cargo.toml
crates/netanvil-harness/src/: lib.rs  parsing.rs
crates/netanvil-http/: Cargo.toml
crates/netanvil-http/src/: connector.rs  executor.rs  lib.rs  observed.rs  throttle.rs  tls.rs
crates/netanvil-http/tests/: http_executor_behavior.rs  throttle_behavior.rs  tls_behavior.rs
crates/netanvil-metrics/: Cargo.toml
crates/netanvil-metrics/src/: aggregate.rs  collector.rs  encoding.rs  lib.rs
crates/netanvil-plugin/: Cargo.toml
crates/netanvil-plugin-lua54/: Cargo.toml
crates/netanvil-plugin-lua54/src/: lib.rs
crates/netanvil-plugin-luajit/: Cargo.toml
crates/netanvil-plugin-luajit/src/: lib.rs
crates/netanvil-plugin-luajit/tests/: multi_protocol_lua.rs
crates/netanvil-plugin-v8/: Cargo.toml
crates/netanvil-plugin-v8/benches/: v8_overhead.rs
crates/netanvil-plugin-v8/src/: lib.rs
crates/netanvil-plugin/benches/: plugin_overhead.rs  response_overhead.rs
crates/netanvil-plugin/examples/scripts/: README.md  api_load_test.lua  dns_enumeration.lua  generator.js  generator.lua  generator.rhai  graphql_queries.lua  hybrid_config.lua  response_handler.js  response_handler.lua  response_handler_minimal.js  response_handler_minimal.lua  session_generator.lua  url_patterns.lua
crates/netanvil-plugin/guest-wasm/: Cargo.toml
crates/netanvil-plugin/guest-wasm/src/: lib.rs
crates/netanvil-plugin/src/: error.rs  hybrid.rs  lib.rs  rhai_runtime.rs  types.rs  wasm.rs
crates/netanvil-plugin/testdata/: netanvil_guest_wasm.wasm  netanvil_guest_wasm_response.wasm
crates/netanvil-plugin/tests/: multi_protocol_rhai.rs
crates/netanvil-redis/: Cargo.toml
crates/netanvil-redis/src/: executor.rs  generator.rs  lib.rs  resp.rs  transformer.rs
crates/netanvil-sampling/: Cargo.toml
crates/netanvil-sampling/src/: convert.rs  lib.rs  lifecycle.rs  sampler.rs
crates/netanvil-tcp/: Cargo.toml
crates/netanvil-tcp/src/: executor.rs  framing.rs  generator.rs  lib.rs  pool.rs  protocol.rs  spec.rs  transformer.rs
crates/netanvil-tcp/tests/: tcp_e2e.rs
crates/netanvil-test-servers/: Cargo.toml
crates/netanvil-test-servers/src/: bufpool.rs  dns.rs  lib.rs  metrics.rs  protocol.rs  reporter.rs  tcp.rs  udp.rs
crates/netanvil-test-servers/tests/: cli_integration.rs  server_behavioral.rs
crates/netanvil-types/: Cargo.toml
crates/netanvil-types/src/: command.rs  config.rs  controller.rs  distributed.rs  distribution.rs  dns_spec.rs  error.rs  lib.rs  metrics.rs  node.rs  redis_spec.rs  request.rs  tcp_spec.rs  traits.rs  udp_spec.rs
crates/netanvil-udp/: Cargo.toml
crates/netanvil-udp/src/: executor.rs  generator.rs  lib.rs  loss_tracker.rs  spec.rs  transformer.rs
crates/netanvil-udp/tests/: udp_e2e.rs
docs/: README.md  architecture.md  plugins.md  section-1-architecture.md  section-2-1-rate-control.md  section-2-10-metrics-registry.md  section-2-2-request-scheduler.md  section-2-3-request-scheduler.md
docs/archive/: Diagram.mermaid
docs/archive/design/: 3-1-request-processing-overview.md  SystemsDesign.md  eBPFProfiling.md  section-2-1-rate-control.md  section-2-2-client-session-manager.md  section-3-1-request-generator.md  section-3-2-request-transformer.md  section-4-1-distributed-overview-design.md  section-4-10-distributed-testing-strategy.md  (+11 more)
examples/wasm-plugin/: Cargo.toml  README.md
examples/wasm-plugin-response/: Cargo.toml
examples/wasm-plugin-response/src/: lib.rs
man/: Makefile  README.md  build.sh  netanvil-cli-agent.1.scd  netanvil-cli-leader-server.1.scd  netanvil-cli-leader.1.scd  netanvil-cli-test.1.scd  netanvil-cli.1.scd  netanvil-protocols.7.scd  netanvil-rate-control.7.scd  netanvil-test-server.1.scd
scripts/: gen-certs.sh
(+37 files in other folders)
