[workspace]
resolver = "2"
members = [
    "crates/netanvil-types",
    "crates/netanvil-metrics",
    "crates/netanvil-core",
    "crates/netanvil-http",
    "crates/netanvil-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NetAnvil-RS Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime (thread-per-core, io_uring)
compio = { version = "0.18", features = ["time", "net", "runtime", "macros"] }
compio-dispatcher = "0.6"

# HTTP client (compio + hyper bridge)
cyper = "0.8"

# Cross-thread channels
flume = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
http = "1.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
hdrhistogram = "7.5"

# Randomness
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing (dev only)
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "time"] }
axum = "0.8"

# Internal dependencies
netanvil-types = { path = "crates/netanvil-types" }
netanvil-metrics = { path = "crates/netanvil-metrics" }
netanvil-core = { path = "crates/netanvil-core" }
netanvil-http = { path = "crates/netanvil-http" }
netanvil-cli = { path = "crates/netanvil-cli" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
