[workspace]
resolver = "2"
members = [
    "crates/netanvil-types",
    "crates/netanvil-sampling",
    "crates/netanvil-metrics",
    "crates/netanvil-core",
    "crates/netanvil-http",
    "crates/netanvil-api",
    "crates/netanvil-distributed",
    "crates/netanvil-plugin",
    "crates/netanvil-plugin-luajit",
    "crates/netanvil-plugin-lua54",
    "crates/netanvil-plugin-v8",
    "crates/netanvil-tcp",
    "crates/netanvil-udp",
    "crates/netanvil-dns",
    "crates/netanvil-redis",
    "crates/netanvil-events",
    "crates/netanvil-test-servers",
    "crates/netanvil-harness",
    "crates/netanvil-cli",
]

# Only build luajit by default (lua54 conflicts at link time).
# Build lua54 explicitly: cargo build -p netanvil-plugin-lua54
default-members = [
    "crates/netanvil-types",
    "crates/netanvil-sampling",
    "crates/netanvil-metrics",
    "crates/netanvil-core",
    "crates/netanvil-http",
    "crates/netanvil-tcp",
    "crates/netanvil-udp",
    "crates/netanvil-dns",
    "crates/netanvil-redis",
    "crates/netanvil-events",
    "crates/netanvil-test-servers",
    "crates/netanvil-api",
    "crates/netanvil-distributed",
    "crates/netanvil-plugin",
    "crates/netanvil-plugin-luajit",
    "crates/netanvil-harness",
    "crates/netanvil-cli",
]

[workspace.package]
version = "0.1.29"
edition = "2021"
authors = ["NetAnvil-RS Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime (thread-per-core, io_uring) — using local fork for linked SQE support
compio = { version = "0.18", features = ["time", "net", "runtime", "macros"] }
compio-dispatcher = "0.6"
# Direct dep on compio-net for recv_observe (linked SQE getsockopt)
compio-net = { version = "0.11" }
# Direct dep on compio-driver for op types
compio-driver = { version = "0.11", features = ["io-uring"] }

# HTTP client (compio + hyper bridge)
cyper = "0.8"

# Cross-thread channels
flume = "0.11"

# CPU core pinning
core_affinity = "0.8"

# HTTP API framework + OpenAPI
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# HTTP client (for leader→agent communication)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
http = "1.1"

# System
libc = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
hdrhistogram = "7.5"

# Randomness
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Workspace crate dependencies
netanvil-types = { path = "crates/netanvil-types" }
netanvil-sampling = { path = "crates/netanvil-sampling" }
netanvil-metrics = { path = "crates/netanvil-metrics" }
netanvil-core = { path = "crates/netanvil-core" }
netanvil-http = { path = "crates/netanvil-http" }
netanvil-api = { path = "crates/netanvil-api" }
netanvil-distributed = { path = "crates/netanvil-distributed" }
netanvil-plugin = { path = "crates/netanvil-plugin" }
netanvil-plugin-luajit = { path = "crates/netanvil-plugin-luajit" }
netanvil-plugin-lua54 = { path = "crates/netanvil-plugin-lua54" }
netanvil-plugin-v8 = { path = "crates/netanvil-plugin-v8" }
netanvil-events = { path = "crates/netanvil-events" }
netanvil-tcp = { path = "crates/netanvil-tcp" }
netanvil-udp = { path = "crates/netanvil-udp" }
netanvil-dns = { path = "crates/netanvil-dns" }
netanvil-redis = { path = "crates/netanvil-redis" }
netanvil-test-servers = { path = "crates/netanvil-test-servers" }
netanvil-harness = { path = "crates/netanvil-harness" }
netanvil-cli = { path = "crates/netanvil-cli" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Redirect all compio crates to local fork for linked SQE support.
# This patches both our direct deps and cyper's transitive deps.
[patch.crates-io]
compio = { path = "../upstream/compio/compio" }
compio-buf = { path = "../upstream/compio/compio-buf" }
compio-driver = { path = "../upstream/compio/compio-driver" }
compio-runtime = { path = "../upstream/compio/compio-runtime" }
compio-net = { path = "../upstream/compio/compio-net" }
compio-io = { path = "../upstream/compio/compio-io" }
compio-log = { path = "../upstream/compio/compio-log" }
compio-macros = { path = "../upstream/compio/compio-macros" }
compio-tls = { path = "../upstream/compio/compio-tls" }
compio-fs = { path = "../upstream/compio/compio-fs" }
compio-dispatcher = { path = "../upstream/compio/compio-dispatcher" }
io-uring = { path = "../upstream/io-uring" }
