[package]
name = "netanvil-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP control API for netanvil-rs load testing"

[dependencies]
netanvil-types = { workspace = true }
netanvil-core = { workspace = true }
netanvil-http = { workspace = true }
netanvil-plugin = { workspace = true }
netanvil-plugin-luajit = { workspace = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }
hostname = "0.4"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

[dev-dependencies]
netanvil-http = { workspace = true }
netanvil-metrics = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
compio = { workspace = true }
