[package]
name = "netanvil-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP control API for netanvil-rs load testing"

[dependencies]
netanvil-types = { workspace = true }
netanvil-core = { workspace = true }
netanvil-http = { workspace = true }
netanvil-tcp = { workspace = true }
netanvil-udp = { workspace = true }
netanvil-dns = { workspace = true }
netanvil-redis = { workspace = true }
netanvil-plugin = { workspace = true }
netanvil-plugin-luajit = { workspace = true }
netanvil-plugin-v8 = { workspace = true, optional = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }
hostname = "0.4"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

[features]
v8 = ["netanvil-plugin-v8"]

[dev-dependencies]
netanvil-http = { workspace = true }
netanvil-metrics = { workspace = true }
netanvil-test-servers = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
compio = { workspace = true }
