[package]
name = "netanvil-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for netanvil-rs load testing"

[[bin]]
name = "netanvil-cli"
path = "src/main.rs"

[dependencies]
netanvil-types = { workspace = true }
netanvil-core = { workspace = true }
netanvil-http = { workspace = true }
netanvil-metrics = { workspace = true }
netanvil-api = { workspace = true }
netanvil-distributed = { workspace = true }
flume = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
