[package]
name = "netanvil-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for netanvil-rs load testing"

[[bin]]
name = "netanvil-cli"
path = "src/main.rs"

[dependencies]
netanvil-types = { workspace = true }
netanvil-core = { workspace = true }
netanvil-http = { workspace = true }
netanvil-metrics = { workspace = true }
netanvil-api = { workspace = true }
netanvil-distributed = { workspace = true }
netanvil-tcp = { workspace = true }
netanvil-udp = { workspace = true }
netanvil-dns = { workspace = true }
netanvil-plugin = { workspace = true }
netanvil-plugin-luajit = { workspace = true }
netanvil-harness = { workspace = true }
flume = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored", "send"] }
tempfile = "3"
