[package]
name = "netanvil-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for netanvil-rs load testing"

[[bin]]
name = "netanvil-cli"
path = "src/main.rs"

[dependencies]
netanvil-types = { workspace = true }
netanvil-core = { workspace = true }
netanvil-http = { workspace = true }
netanvil-metrics = { workspace = true }
netanvil-api = { workspace = true }
netanvil-distributed = { workspace = true }
netanvil-tcp = { workspace = true }
netanvil-udp = { workspace = true }
netanvil-dns = { workspace = true }
netanvil-redis = { workspace = true }
netanvil-plugin = { workspace = true }
netanvil-plugin-luajit = { workspace = true }
netanvil-harness = { workspace = true }
netanvil-events = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"

[features]
v8 = ["netanvil-harness/v8", "netanvil-api/v8"]

[dev-dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored", "send"] }
tempfile = "3"

[package.metadata.deb]
maintainer = "NetAnvil-RS Contributors"
copyright = "2024, NetAnvil-RS Contributors"
depends = "$auto"
section = "utils"
priority = "optional"
extended-description = """\
High-performance network load testing framework built on \
thread-per-core architecture with io_uring. Features coordinated \
omission prevention, accurate HDR histogram percentiles, pluggable \
rate control (PID, step, composite), and multi-protocol support \
(HTTP/1.1, HTTP/2, TCP, UDP, DNS). Extensible via WASM, Lua, and \
Rhai plugins."""
assets = [
    ["target/release/netanvil-cli", "usr/bin/", "755"],
]
