[package]
name = "netanvil-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Distributed coordination for netanvil-rs load testing"

[dependencies]
netanvil-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
flume = { workspace = true }

[dev-dependencies]
netanvil-api = { workspace = true }
netanvil-http = { workspace = true }
netanvil-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing-subscriber = { workspace = true }
