[package]
name = "netanvil-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Distributed coordination for netanvil-rs load testing"

[dependencies]
netanvil-types = { workspace = true }
netanvil-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
flume = { workspace = true }
netanvil-api = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
netanvil-api = { workspace = true }
netanvil-http = { workspace = true }
netanvil-dns = { workspace = true }
netanvil-core = { workspace = true }
netanvil-test-servers = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
