[package]
name = "netanvil-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DNS protocol executor for netanvil-rs load testing"

[dependencies]
netanvil-types = { workspace = true }
compio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
netanvil-test-servers = { workspace = true }
netanvil-core = { workspace = true }
netanvil-metrics = { workspace = true }
