[package]
name = "netanvil-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP executor for load testing using compio and cyper"

[dependencies]
netanvil-types = { workspace = true }
compio = { workspace = true }
cyper = { workspace = true }
cyper-core = "0.8"
compio-tls = { version = "0.9", features = ["native-tls", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
http = { workspace = true }
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
tower-service = "0.3"
send_wrapper = { version = "0.6", features = ["futures"] }
futures-util = "0.3"
http-body-util = "0.1"
bytes = "1"
libc = "0.2"
tracing = { workspace = true }

[dev-dependencies]
compio = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
rcgen = "0.13"
tokio-rustls = "0.26"
rustls-pemfile = "2"
tempfile = "3"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio", "server-auto"] }
