[package]
name = "netanvil-plugin-luajit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LuaJIT plugin runtime for netanvil-rs"

[dependencies]
netanvil-types = { workspace = true }
netanvil-plugin = { workspace = true }
http = { workspace = true }
mlua = { version = "0.10", features = ["luajit", "vendored", "send"] }
