[package]
name = "netanvil-test-servers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compio-based test servers (TCP echo, UDP echo) for netanvil-rs integration testing"

[dependencies]
compio = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
core_affinity = { workspace = true }

[[bin]]
name = "tcp-echo"
path = "src/bin/tcp_echo.rs"

[[bin]]
name = "udp-echo"
path = "src/bin/udp_echo.rs"

[[bin]]
name = "dns-echo"
path = "src/bin/dns_echo.rs"

[[bin]]
name = "netanvil-test-server"
path = "src/bin/test_server.rs"

[package.metadata.deb]
maintainer = "NetAnvil-RS Contributors"
copyright = "2024, NetAnvil-RS Contributors"
depends = "$auto"
section = "utils"
priority = "optional"
extended-description = """\
TCP echo, UDP echo, and DNS echo servers for load testing with netanvil-rs. \
The TCP server supports multiple modes: echo, request-response, sink, source, \
and bidirectional. Used as unit-under-test targets for distributed load tests."""
assets = [
    ["target/release/netanvil-test-server", "usr/bin/", "755"],
    ["target/release/tcp-echo", "usr/bin/", "755"],
    ["target/release/udp-echo", "usr/bin/", "755"],
    ["target/release/dns-echo", "usr/bin/", "755"],
]
