[package]
name = "netanvil-test-servers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compio-based test servers (TCP echo, UDP echo) for netanvil-rs integration testing"

[dependencies]
compio = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
core_affinity = { workspace = true }
socket2 = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "netanvil-test-server"
path = "src/bin/test_server.rs"

[dev-dependencies]
compio = { workspace = true }
netanvil-core = { workspace = true }
netanvil-types = { workspace = true }
netanvil-tcp = { workspace = true }
netanvil-udp = { workspace = true }
serde_json = { workspace = true }
serial_test = "3"

[package.metadata.deb]
maintainer = "NetAnvil-RS Contributors"
copyright = "2024, NetAnvil-RS Contributors"
depends = "$auto"
section = "utils"
priority = "optional"
extended-description = """\
Compio-based test servers for load testing with netanvil-rs. Supports TCP \
(echo, RR, CRR, sink, source, bidir), UDP (echo with pacing/latency/drop \
injection), and DNS (authoritative echo). Single multicall binary — create \
symlinks named netanvil-tcp-echo, netanvil-udp-echo, netanvil-dns-echo for \
single-protocol mode with clean per-protocol --help."""
assets = [
    ["target/release/netanvil-test-server", "usr/bin/", "755"],
    ["../../man/generated/netanvil-test-server.1", "usr/share/man/man1/", "644"],
]
# Post-install: create symlinks for single-protocol invocation
# ln -sf netanvil-test-server /usr/bin/netanvil-tcp-echo
# ln -sf netanvil-test-server /usr/bin/netanvil-udp-echo
# ln -sf netanvil-test-server /usr/bin/netanvil-dns-echo
