[package]
name = "netanvil-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits and types for the netanvil-rs load testing framework"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
