[package]
name = "netanvil-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits and types for the netanvil-rs load testing framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
flume = { workspace = true }
utoipa = { workspace = true }
bytes = "1"
hdrhistogram = { workspace = true }
