[package]
name = "netanvil-udp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "UDP executor for netanvil-rs load testing"

[dependencies]
netanvil-types = { workspace = true }
netanvil-sampling = { workspace = true }
compio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
netanvil-test-servers = { workspace = true }
netanvil-core = { workspace = true }
netanvil-types = { workspace = true }
netanvil-metrics = { workspace = true }
