[package]
name = "example-wasm-plugin-response"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate — not part of the netanvil-rs workspace.
# Build with: cargo build --target wasm32-wasip1 --release
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
